--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.ts",
   "license": "MIT",
   "scripts": {
-    "start": "node index.ts",
+    "start": "ts-node index.ts",
     "dev": "nodemon index.ts ts-node"
   },
   "type": "module",
