--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "index.ts",
   "license": "MIT",
   "scripts": {
-    "start": "ts-node index.ts",
-    "dev": "nodemon index.ts ts-node"
+    "start": "node .dist/index.js",
+    "dev": "nodemon index.ts"
   },
   "type": "module",
   "dependencies": {
