--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.ts",
   "license": "MIT",
   "scripts": {
-    "start": "node .dist/index.js",
+    "start": "node dist/index.js",
     "dev": "nodemon index.ts"
   },
   "type": "module",
