--- a/package.json
+++ b/package.json
@@ -4,8 +4,15 @@
   "main": "index.ts",
   "license": "MIT",
   "scripts": {
-    "start": "node dist/index.js",
-    "dev": "nodemon index.ts"
+    "start": "node dist/index.js", 
+    "postinstall": "tsc", 
+    "watch-node": "nodemon dist/index.js", 
+    "watch-ts": "tsc - w", 
+    "implementar": "git add . && git commit -m Heroku && git push heroku master",
+    "dev": "nodemon index.ts",
+    "engines": { 
+      "node": "16.13.1"
+     }
   },
   "type": "module",
   "dependencies": {
