--- a/package.json
+++ b/package.json
@@ -3,16 +3,16 @@
   "version": "1.0.0",
   "main": "index.ts",
   "license": "MIT",
+  "engines": { 
+    "node": "16.13.1"
+   },
   "scripts": {
     "start": "node dist/index.js", 
     "postinstall": "tsc", 
     "watch-node": "nodemon dist/index.js", 
     "watch-ts": "tsc - w", 
     "implementar": "git add . && git commit -m Heroku && git push heroku master",
-    "dev": "nodemon index.ts",
-    "engines": { 
-      "node": "16.13.1"
-     }
+    "dev": "nodemon index.ts"
   },
   "type": "module",
   "dependencies": {
