--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "node": "16.13.1"
    },
   "scripts": {
-    "start": "node dist/index.js", 
+    "start": "node index.js", 
     "postinstall": "tsc", 
-    "watch-node": "nodemon dist/index.js", 
+    "watch-node": "nodemon index.js", 
     "watch-ts": "tsc - w", 
     "implementar": "git add . && git commit -m Heroku && git push heroku master",
     "dev": "nodemon index.ts"
